--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,8 @@
 <div class="navbar-fixed">
   <nav>
     <div class="nav-wrapper teal">
-      <a href="#!" class="brand-logo">Logo</a>
+      <%= link_to "FLIPPR", root_path, class: "brand-logo"%>
+
       <ul class="right hide-on-med-and-down">
         <li><%= link_to "Home", root_path%></li>
         <li><%= link_to "About", about_path%></li>
