--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -47,7 +47,7 @@
               </div>
             </div>
 
-                  <a href="#!">Create account</a>
+                  <%= link_to "Create Account", new_user_registration_path %>
 
                       <div class="section"></div>
             </center>
