--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,11 @@
 <body>
   <%= render 'layouts/header' %>
 <div class ="container">
+  <% flash.each do |name, msg| %>
+     <%= content_tag(:div, msg, class: "#{name}") %>
+<% end %>
 <%= yield %>
 </div>
+
 </body>
 </html>
