--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,8 @@
   <div class="section"></div>
   <main>
     <center>
-
+      <% if user_signed_in? %>
+      <%else%>
       <div class="container">
         <div class="z-depth-1 grey lighten-4 row" style="display: inline-block; padding: 32px 48px 0px 48px; border: 1px solid #EEE;">
 
@@ -13,7 +14,7 @@
               </div>
             </div>
   <h2> Welcome to Flippr</h2>
-            <div class='row'>
+          <!--  <div class='row'>
               <div class='input-field col s12'>
                 <i class="material-icons prefix">mail_outline</i>
                 <input class='validate' type='email' name='email' id='email' />
@@ -38,12 +39,12 @@
               <label style='float: right;'>
 								<a class='teal-text' href='#!'><b>Forgot Password?</b></a>
 							</label>
-            </div>
+            </div>-->
 
             <center>
               <div class='row'>
                   <div class="input-field col s12 offset-s3">
-                <button type='submit' name='btn_login' class='col s6 btn btn-large waves-effect teal'>Log In</button>
+                     <%= link_to "Log in", new_user_session_path, class: "col s6 btn btn-large waves-effect teal" %>
               </div>
             </div>
 
@@ -54,6 +55,7 @@
           </form>
         </div>
       </div>
+      <%end%>
     </center>
 
     <div class="section"></div>
