--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,7 +13,8 @@
               <div class='col s12'>
               </div>
             </div>
-  <h2> Welcome to Flippr</h2>
+  <h2> Welcome to Flippr </h2>
+  <h5> Second Hand Luxury Furnitures</h5>
           <!--  <div class='row'>
               <div class='input-field col s12'>
                 <i class="material-icons prefix">mail_outline</i>
